Wrapped more links in spans to prevent the popup icon from getting underline, resolves #1186

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -22,9 +22,10 @@ td {
     padding: 0px;
 }
 
-a {
+a, a:visited {
     text-decoration: none;
     outline: none;
+    color: blue;
 }
 
 a:hover {
@@ -33,10 +34,6 @@ a:hover {
     color: orange;
 }
 
-a:visited {
-    outline: none;
-    color: blue;
-}
 /* Main layout table */
 
 
@@ -495,16 +492,21 @@ div.image-container {
     margin: 0px;
 }
 
+#xplore-totals a:hover {
+    text-decoration: none;
+    color: gray;
+}
+
 .group a:hover {
    color: blue;
    cursor: default;
 }
 
-.group a img {
+.group a img, .xplore-totals img {
    cursor: pointer;
 }
 
-.group .item_odd span:hover, .group .item_even span:hover {
+.group .item_odd span:hover, .group .item_even span:hover, #xplore-totals span:hover {
     color: orange;
     text-decoration: underline;
     cursor: pointer;
